--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=FrequencyTimer2
-version=2.1
-author=Jim Studt
-maintainer=Paul Stoffregen
-sentence=Generate a frequency using Timer2
-paragraph=
+name=TimerTwo
+version=1.0.0
+author=Nadav Matalon
+maintainer=Nadav Matalon
+sentence=Timer2 Functionality
+paragraph=Timer2 Functionality
 category=Timing
-url=http://playground.arduino.cc/Code/FrequencyTimer2
+url=
 architectures=*
 
